--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cached_network_image: ^3.3.1
   skeletonizer: ^1.4.1+1
   fluttertoast: ^8.2.6
+  socket_io_client: ^2.0.3+1
+  flutter_background_service: ^5.0.6
 
 dev_dependencies:
   flutter_test:
