--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   fluttertoast: ^8.2.6
   socket_io_client: ^2.0.3+1
   flutter_background_service: ^5.0.6
+  connectivity_plus: ^6.0.4
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
