--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_background_service: ^5.0.6
   connectivity_plus: ^6.0.4
   path_provider: ^2.1.4
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
